--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,19 @@
 # Debug files
 *.dSYM/
 *~
+
+# autotools cruft
+*.in
+/_build/
+/aclocal.m4
+/autom4te.cache/
+/compile
+/config.guess
+/config.sub
+/configure
+/depcomp
+/install-sh
+/ltmain.sh
+/m4/
+/missing
+/test-driver
