--- a/circle.yml
+++ b/circle.yml
@@ -6,3 +6,8 @@ machine:
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
 
+test:
+  post:
+    - make check
+    - make distcheck
+
