--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ machine:
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.6 10
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
+    - wget -O- https://raw.githubusercontent.com/rubicks/autotoolme/master/autotoolme.sh | sudo sh
 
 test:
   post:
