--- a/circle.yml
+++ b/circle.yml
@@ -5,17 +5,17 @@ machine:
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.6 10
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
+  post:
     - wget -O- https://raw.githubusercontent.com/rubicks/autotoolme/master/autotoolme.sh | sudo sh
 
 test:
   post:
-    - set -e
-    - export PROJECT_ROOT=$(pwd)
-    - cd $(mktemp -d)
-    - autoreconf -ivf ${PROJECT_ROOT}
-    - ${PROJECT_ROOT}/configure
-    - make
-    - make check
-    - make distcheck
-    - make install
+      export PROJECT_ROOT=$(pwd)      && \
+      cd $(mktemp -d)                 && \
+      autoreconf -ivf ${PROJECT_ROOT} && \
+      ${PROJECT_ROOT}/configure       && \
+      make                            && \
+      make check                      && \
+      make distcheck                  && \
+      make install
 
