--- a/circle.yml
+++ b/circle.yml
@@ -5,5 +5,5 @@ machine:
 
 test:
   post:
-    - docker build -t morton . && docker run -it morton /bin/bash -c 'make install'
+    - docker build -t morton . && docker run -it morton
 
