--- a/.travis.yml
+++ b/.travis.yml
@@ -1,65 +1,14 @@
+sudo: required
+
 language: c
 
 compiler:
   - gcc
   - clang
 
-before_install:
-  - uname -a
-  - sudo apt-get update -qq
-
-# install:
-#   - sudo apt-get install -y g++-4.6
-#   - sudo apt-get install -y check
-#   - sudo apt-get install -y automake
-#   - sudo apt-get install -y autoconf
-#   - sudo apt-get install -y autoconf-archive
-#   - sudo apt-get install -y libtool
-#   - echo "=== TRAVIS NEEDS AUTOMAKE ==="
-#   - cd `mktemp -d`
-#   - wget http://ftp.gnu.org/gnu/automake/automake-1.14.1.tar.xz
-#   - tar vxJf automake-1.14.1.tar.xz
-#   - cd automake-1.14.1
-#   - ./configure && make && sudo make install
-#   - echo "=== TRAVIS NEEDS AUTOCONF ==="
-#   - cd `mktemp -d`
-#   - wget http://ftp.gnu.org/gnu/autoconf/autoconf-2.69.tar.xz
-#   - tar vxJf autoconf-2.69.tar.xz
-#   - cd autoconf-2.69
-#   - ./configure && make && sudo make install
-#   - echo "=== TRAVIS NEEDS AUTOCONF-ARCHIVE ==="
-#   - cd `mktemp -d`
-#   - wget http://ftp.gnu.org/gnu/autoconf-archive/autoconf-archive-2014.02.28.tar.xz
-#   - tar vxJf autoconf-archive-2014.02.28.tar.xz
-#   - cd autoconf-archive-2014.02.28
-#   - ./configure && make && sudo make install
-#   - echo "=== TRAVIS NEEDS LIBTOOL ==="
-#   - cd `mktemp -d`
-#   - wget http://ftp.gnu.org/gnu/libtool/libtool-2.4.2.tar.xz
-#   - tar vxJf libtool-2.4.2.tar.xz
-#   - cd libtool-2.4.2
-#   - ./configure && make && sudo make install
-#   - echo "Getting real tired of your shit, Travis."
-
-
-before_script:
-  - env | sort
-  - command -v autoconf && autoconf --version
-  - command -v automake && automake --version
-  - command -v libtool  && libtool  --version
+services:
+  - docker
 
 script:
-  - set -e
-  - cd ${TRAVIS_BUILD_DIR}
-  - pwd
-  - mkdir -vp _build
-  - cd _build
-  - autoreconf -ivf ..
-  - ../configure
-  - make
-  - make check
-  - make distcheck
-
-notifications:
-  - email: false
+  - docker build -t morton . && docker run -it morton
 
