ax_check_compile_flag -std=c11

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,8 +8,7 @@ AM_CFLAGS =        \
   -Wconversion     \
   -Werror          \
   -Wextra          \
-  -pedantic-errors \
-  -std=c11
+  -pedantic-errors
 
 
 lib_LTLIBRARIES = libmorton.la
