--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,13 @@
 *~
 
 # autotools cruft
+/Makefile.in
 /_build/
 /aclocal.m4
 /autom4te.cache/
 /compile
 /config.guess
+/config.h.in
 /config.sub
 /configure
 /depcomp
