edit configure.ac Makefile.am, static link test unit

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,18 +10,19 @@ AM_CFLAGS =        \
   -pedantic-errors \
   -std=c99
 
-lib_LTLIBRARIES = libmorton.la
-libmorton_la_SOURCES = morton.h morton.c
-include_HEADERS = morton.h
+noinst_LTLIBRARIES = libcommon.la
+libcommon_la_SOURCES = morton.h morton.c
 
-# When check_PROGRAMS are linked against dynamic lib_LTLIBRARIES, automake
+# When check_PROGRAMS are dynamically linked against lib_LTLIBRARIES, automake
 # generates them as posix shell scripts.
 #
-# When check_PROGRAMS are linked against static noinst_LTLIBRARIES, automake
+# When check_PROGRAMS are statically linked against lib_LTLIBRARIES, automake
 # generates them as stand-alone binaries.
 
-noinst_LTLIBRARIES = libcommon.la
-libcommon_la_SOURCES = $(libmorton_la_SOURCES)
+lib_LTLIBRARIES = libmorton.la
+libmorton_la_SOURCES =
+libmorton_la_LIBADD = libcommon.la
+include_HEADERS = morton.h
 
 check_PROGRAMS = \
   test_impl      \
@@ -31,6 +32,7 @@ test_impl_SOURCES = test/impl.c
 
 test_iface_SOURCES = test/iface.c
 test_iface_LDADD = libmorton.la
+test_iface_LDFLAGS = -static
 
 TESTS = $(check_PROGRAMS)
 
