--- a/configure.ac
+++ b/configure.ac
@@ -14,7 +14,7 @@ AM_INIT_AUTOMAKE([foreign subdir-objects dist-bzip2 dist-xz tar-pax])
 LT_PREREQ([2.4.6])
 #LT_INIT([dlopen])
 #LT_INIT([disable-shared])
-LT_INIT([static shared])
+LT_INIT
 
 # Checks for programs.
 PKG_PROG_PKG_CONFIG([])
