--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_LANG_PUSH([C])
 AC_CONFIG_SRCDIR([morton.h])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([foreign subdir-objects dist-bzip2 dist-xz tar-pax])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects dist-bzip2 dist-xz tar-pax])
 LT_PREREQ([2.4.6])
 #LT_INIT([dlopen])
 #LT_INIT([disable-shared])
@@ -19,6 +19,7 @@ LT_INIT
 # Checks for programs.
 PKG_PROG_PKG_CONFIG([])
 AC_PROG_CC_STDC
+AM_PROG_AR
 
 # Checks for header files.
 AC_HEADER_STDC # stdlib, stdarg, string, float.h
