--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,16 @@ sudo: required
 
 os:
   - linux
-  - osx
 
 compiler:
   - gcc
   - clang
 
+before_install:
+  - apt-get update
+
 install:
+  - apt-get install build-essential
   - wget -qO- https://raw.githubusercontent.com/rubicks/autotoolme/master/autotoolme.sh | sudo sh
 
 script:
