fix a bunch of stuff

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,13 +23,14 @@ include_HEADERS = morton.h
 # generates them as stand-alone binaries.
 
 lib_LTLIBRARIES = libmorton.la
-libmorton_la_SOURCES = morton.c morton.h binlit.h
+libmorton_la_SOURCES = morton.c morton.h binlit.h util.c util.h
 libmorton_la_LDFLAGS = -export-symbols-regex '^morton_'
 
 check_PROGRAMS = \
   test_binlit \
+  test_iface \
   test_impl \
-  test_iface
+  test_util
 
 test_binlit_SOURCES = test/binlit.c
 
@@ -38,6 +39,10 @@ test_impl_SOURCES = test/impl.c
 test_iface_SOURCES = test/iface.c
 test_iface_LDADD = libmorton.la
 test_iface_LDFLAGS = -static
+
+test_util_SOURCES = test/util.c
+test_util_LDADD = libmorton.la
+test_util_LDFLAGS = -static
 
 TESTS = $(check_PROGRAMS)
 
